# FidelityNurture

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
fidelity_nurture/: __init__.py  __main__.py
fidelity_nurture/ai/: optimizer.py  predictor.py  simulator.py
fidelity_nurture/core/: analyzer.py  portfolio.py
fidelity_nurture/data/: market.py
fidelity_nurture/ui/: dashboard.py
tests/: test_core.py
