[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fidelity-nurture"
version = "1.0.0"
description = "AI-Powered Portfolio Intelligence Platform — analyze, optimize, and monitor your investments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Chandan"}]
keywords = ["finance", "portfolio", "ai", "fidelity", "investment", "risk-analysis", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
nurturefolio = "fidelity_nurture.__main__:main"

[tool.setuptools.packages.find]
include = ["fidelity_nurture*"]
